# cs3141_Haskell

./: example_code.hs
Art/: Art.hs
Art.hsproj/: .uuid
Art.hsproj/Art/: Art.cabal  Art.hs  _Art.hsplay
Art/.stack-work/ghci/d84bf9af/: cabal_macros.h
Ex01/: Ex01.hs
Ex01.hsproj/: .uuid
Ex01.hsproj/Ex01/: Ex01.cabal  Ex01.hs  _Ex01.hsplay
Ex02/: Ex02.hs
Ex02.hsproj/: .uuid
Ex02.hsproj/Ex02/: Ex02.cabal  Ex02.hs  _Ex02.hsplay
Ex02/.stack-work/ghci/46acdffd/: cabal_macros.h
Ex02/.stack-work/install/x86_64-osx/lts-10.3/8.2.2/flag-cache/: QuickCheck-2.10.1-Ewacc04OJICEFWthkI3IgS  random-1.1-LLUGZ7T9DqQ5vN0Jbcd0We  tf-random-0.5-ABwehMmciu8CuAFbHLp6To
Ex03/: Ex03.hs
Ex03.hsproj/: .uuid
Ex03.hsproj/Ex03/: Ex03.cabal  _Ex03.hsplay
Ex04/: Ex04.hs
Ex04.hsproj/: .uuid
Ex04.hsproj/Ex04/: Ex04.cabal  Ex04.hs  _Ex04.hsplay
Ex05/: Ex05.hs  input.txt
Ex05.hsproj/: .uuid
Ex05.hsproj/Ex05/: Ex05.cabal  Ex05.hs  _Ex05.hsplay  input1.txt  input2.txt  output1.txt
Ex06/: Ex06.hs
Ex06.hsproj/: .uuid
Ex06.hsproj/Ex06/: Ex06.cabal  Ex06.hs  _Ex06.hsplay
Hare/: Hare.hs
Hare.hsproj/: .uuid
Hare.hsproj/Hare/: Hare.cabal  Hare.hs  _Hare.hsplay
Hare/.stack-work/: stack.sqlite3
Quiz.hsproj/: .uuid
Quiz.hsproj/Quiz/: Main.hs  Quiz.cabal  Quiz1.hs  Quiz2.hs  Quiz3.hs  Quiz4.hs  Quiz5.hs  Quiz6.hs  _Main.hsplay  _Quiz3.hsplay  _Quiz4.hsplay  _Quiz5.hsplay  _Quiz6.hsplay
SomeTests/: Test.hs  Test2.hs
Tortoise/: Main.hs  TortoiseCombinators.hs
Tortoise.hsproj/: .uuid
Tortoise.hsproj/Tortoise/: Tortoise.cabal  TortoiseCombinators.hs
