name: Hare
version: 1.0
cabal-version: >=1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    Tests/transcript.txt
    Untyped.hs
x-ghc-framework-version: 8.0.2-9.6-2
x-last-ide-version: HfM1.6.1

executable HareTests
    main-is: Tests.hs
    build-depends:
        base -any,
        QuickCheck -any,
        tasty -any,
        tasty-quickcheck -any,
        tasty-hunit -any,
        transformers -any,
        mtl -any
    default-language: Haskell2010
    other-modules:
        Hare
        Tests.Examples
        Tests.UnitTests
        Tests.Transcript
        Tests.Support
        HareMonad

