name: Quiz
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-2
x-last-ide-version: HfM1.6.1

executable Quiz
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any
    default-language: Haskell2010
    other-modules:
        Quiz2
        Quiz3
        Quiz1

