name: Tortoise
version: 1.0
cabal-version: >=1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-2
x-last-ide-version: HfM1.6.1

executable Tortoise
    main-is: Main.hs
    build-depends:
        base -any,
        JuicyPixels -any,
        Rasterific -any,
        QuickCheck -any
    default-language: Haskell2010
    other-modules:
        TortoiseGraphics
        TortoiseCombinators
        Tortoise

executable TortoiseTests
    main-is: Tests.hs
    build-depends:
        base -any,
        QuickCheck -any,
        tasty -any,
        tasty-quickcheck -any
    default-language: Haskell2010
    other-modules:
        TestSupport
        TortoiseCombinators
        Tortoise

